refactor(common): 使用新的集合方法替换旧的索引访问方式
- 在BacktestCache中使用getFirst()和getLast()替代get(0)和get(size-1)
- 在EventStreamUtil中使用getFirst()替代get(0)
- 在ListUtil中使用getLast()替代get(size-1)并移除多余空行
- 在MonthlyBullSignal中使用getFirst()和getLast()替代索引访问
- 在MonthlyBullSignal2中使用getLast()替代get(size-1)
- 在TdxDataParserServiceImpl中使用getFirst()替代get(0)
- 在WebLogAspect中使用isEmpty()和getFirst()优化参数检查逻辑